--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE HTML>
 <html>
 <head>
+<meta http-equiv="Refresh" content="1;url=http://voucheron.leocondori.com.ar"> 
+
 <meta charset="utf-8">
 <!-- TemplateBeginEditable name="doctitle" -->
 <title>WebApp Itris Software</title>
